# chat_study

./: .gitignore  README.md  docker-compose.yaml  maybetxt
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/db/: db.py  models.py
backend/app/routers/: analytics.py  package.py  psr.py  timeline.py
backend/app/schemas/: analytics.py  backupschemas.py  comments.py  milestones.py  package.py  psr.py  timeline.py
backend/app/services/: analytics.py  comment.py  package.py  psr.py  timeline.py
database/scripts/: init.sql
mcpserver/: .dockerignore  Dockerfile  pyproject.toml
mcpserver/src/: __init__.py
mcpserver/src/server/: server.py
